add sequence diagrams to proposal 002
Signed-off-by: Tani <111664369+taniwha3@users.noreply.github.com>

--- a/accepted/002.md
+++ b/accepted/002.md
@@ -44,9 +44,51 @@ federation capabilities. This is useful for small one-off nodes, development,
 and air-gapped environments. A set of keys will be generated automatically for
 the node, but will not automatically be correlated with any external identity.
 
+```mermaid
+sequenceDiagram
+activate Operator
+activate OS
+activate GitHub
+Operator->>OS: Install auraed
+Operator->>OS: Configure bootstrap URL
+Operator->>OS: Run auraed
+OS->>auraed: <execute> auraed
+activate auraed
+OS-->>Operator: report aurae status
+auraed->>GitHub: fetch taniwha.keys
+note over auraed: generate CA
+note over auraed: enable one-time bootstrapping
+Operator->>Operator: create SSH key
+Operator->>auraed: public SSH key
+note over auraed: sign the public SSH key
+auraed-->>Operator: signed certificate chain
+Operator-->>auraed: reconnect with new key
+deactivate auraed
+deactivate GitHub
+deactivate Operator
+deactivate OS
+```
+
 #### Federated mode
 The aurae deaemon may be correlated with an external identity by signing the
 SSH using PKI.
+
+```mermaid
+sequenceDiagram
+activate Operator
+activate OS
+Operator->>OS: Install auraed
+Operator->>OS: Install Public CA certificate
+Operator->>OS: Run auraed
+OS->>auraed: <execute> auraed
+activate auraed
+OS-->>Operator: report aurae status
+Operator-->>auraed: connect in SSH Certificate Mode
+deactivate auraed
+deactivate Operator
+deactivate OS
+```
+
 
 
 #### Example metadata for a signed SSH key
