minor updates to prop 002 sequence diagrams
Signed-off-by: Tani <111664369+taniwha3@users.noreply.github.com>

--- a/accepted/002.md
+++ b/accepted/002.md
@@ -49,16 +49,16 @@ sequenceDiagram
 activate Operator
 activate OS
 activate GitHub
-Operator->>OS: Install auraed
-Operator->>OS: Configure bootstrap URL
-Operator->>OS: Run auraed
+Operator->>OS: install auraed
+Operator->>OS: configure bootstrap URL
+Operator->>OS: run auraed
 OS->>auraed: <execute> auraed
 activate auraed
 OS-->>Operator: report aurae status
 auraed->>GitHub: fetch taniwha.keys
 note over auraed: generate CA
 note over auraed: enable one-time bootstrapping
-Operator->>Operator: create SSH key
+note over Operator: create SSH key
 Operator->>auraed: public SSH key
 note over auraed: sign the public SSH key
 auraed-->>Operator: signed certificate chain
@@ -77,9 +77,9 @@ SSH using PKI.
 sequenceDiagram
 activate Operator
 activate OS
-Operator->>OS: Install auraed
-Operator->>OS: Install Public CA certificate
-Operator->>OS: Run auraed
+Operator->>OS: install auraed
+Operator->>OS: install Public CA certificate
+Operator->>OS: run auraed
 OS->>auraed: <execute> auraed
 activate auraed
 OS-->>Operator: report aurae status
