prop002: minor change to sequence diagram
Signed-off-by: Tani <111664369+taniwha3@users.noreply.github.com>

--- a/accepted/002.md
+++ b/accepted/002.md
@@ -55,7 +55,7 @@ Operator->>OS: run auraed
 OS->>auraed: <execute> auraed
 activate auraed
 OS-->>Operator: report aurae status
-auraed->>GitHub: fetch taniwha.keys
+auraed->>GitHub: fetch bootstrap ssh keys
 note over auraed: generate CA
 note over auraed: enable one-time bootstrapping
 note over Operator: create SSH key
