prop002: minor change to sequence diagram
Signed-off-by: Tani <111664369+taniwha3@users.noreply.github.com>

--- a/accepted/002.md
+++ b/accepted/002.md
@@ -57,6 +57,7 @@ activate auraed
 OS-->>Operator: report aurae status
 auraed->>GitHub: fetch bootstrap ssh keys
 note over auraed: generate CA
+note over auraed: generate workload certificate
 note over auraed: enable one-time bootstrapping
 note over Operator: create SSH key
 Operator->>auraed: public SSH key
@@ -79,6 +80,7 @@ activate Operator
 activate OS
 Operator->>OS: install auraed
 Operator->>OS: install Public CA certificate
+Operator->>OS: install Workload certificate
 Operator->>OS: run auraed
 OS->>auraed: <execute> auraed
 activate auraed
