reordering content in prop002
Signed-off-by: Tani <111664369+taniwha3@users.noreply.github.com>

--- a/accepted/002.md
+++ b/accepted/002.md
@@ -110,20 +110,9 @@ deactivate OS
                 permit-user-rc
 ```
 
-### Outcomes
-
-The outcome of this will allow for:
-* An operator to authenticate themself to a node.
-* A node to authenticate itself to an operator.
-* A node may be registered to an OIDC identity, provable to any observer.
-
-The outcome of **feature** will unlock the ability for an operator to operate
-an auraed instance.
-
-For OpenSSH:
+#### Relevant OpenSSH Configuraiton Parameters:
 ```
 sshd_config:
-
 TrustedUserCAKeys
 HostKey
 HostCertificate
@@ -131,6 +120,14 @@ HostCertificate
 known_hosts:
 @cert-authority
 ```
+
+### Outcomes
+
+The outcome of this will allow for:
+* An operator to authenticate themself to a node.
+* A node to authenticate itself to an operator.
+* A node may be registered to an OIDC identity, provable to any observer.
+
 
 ### Goals
 
@@ -147,6 +144,7 @@ known_hosts:
 
 * At time of writing, it is not clear which entities
   will be observers capable of validating an OIDC identity.
+
 
 ### Authors
 
