prop002: normalizing names
Signed-off-by: Tani <111664369+taniwha3@users.noreply.github.com>

--- a/accepted/002.md
+++ b/accepted/002.md
@@ -149,5 +149,5 @@ The outcome of this will allow for:
 ### Authors
 
  - [@kris-nova](https://github.com/kris-nova)
- - [@Tani](https://github.com/taniwha3)
+ - [@tani](https://github.com/taniwha3)
  - [@orzen](https://github.com/orzen)
